[package]
name = "sharp-koala"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
reqwest = { version = "0.12.7", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "signal"] }
tracing = "0.1"

[lints]
clippy.as_conversions = "deny"
clippy.expect_used = "deny"
clippy.indexing_slicing = "deny"
clippy.let_underscore_future = "deny"
clippy.panic = "deny"
clippy.mod_module_files = "deny"
clippy.todo = "deny"
clippy.unimplemented = "deny"
clippy.unreachable = "deny"
clippy.unwrap_used = "deny"
rust.missing_debug_implementations = "deny"
rust.missing_docs = "deny"
rust.trivial_casts = "deny"
rust.trivial_numeric_casts = "deny"
rust.unused_extern_crates = "deny"
rust.unused_import_braces = "deny"
rust.unused_qualifications = "deny"
rust.unused_results = "deny"
rust.warnings = "deny"
